--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://VitaBabenko.github.io/test_react_app/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -14,8 +15,10 @@
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.2.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^4.4.1",
     "web-vitals": "^2.1.3"
   },
