--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "test_react_app",
+  "name": "tweets_app__react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VitaBabenko.github.io/test_react_app/",
+  "homepage": "https://VitaBabenko.github.io/tweets_app__react/",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "modern-normalize": "^1.1.0",
-    "nanoid": "^4.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
-    "react-loading-skeleton": "^3.2.1",
-    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
     "styled-components": "^4.4.1",
     "web-vitals": "^2.1.3"
   },
