--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tweets_app__react",
+  "name": "tweets_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VitaBabenko.github.io/tweets_app__react/",
+  "homepage": "https://VitaBabenko.github.io/tweets_react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
